--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <div class="letter-container">
         <h1 class="title">To My Dearest Love</h1>
         <img src="img/picture.jpg" alt="Love Image" class="love-image">
+        <p class="signature1"><br>Dear,priya A</p>
         <p class="content">From the moment we met, my heart knew it had found its home. Your smile brightens my darkest days, and your laughter is the sweetest melody I could ever wish to hear.</p>
         <p class="content">With you, every moment is a treasure, and I am endlessly grateful for your love. You are my inspiration, my confidant, and my greatest joy.</p>
         <p class="content">I promise to stand by you through thick and thin, to celebrate our victories and support you through the challenges. Together, we can conquer the world.</p>
-        <p class="signature">Forever yours, <br> [Main M]</p>
+        <p class="content"> <center>"Love you so much baby"</center></p>
+        <p class="signature2">Forever yours, <br> [Main M]</p> 
     </div>
     <script src="script.js"></script>
 </body>
