--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="content">With you, every moment is a treasure, and I am endlessly grateful for your love. You are my inspiration, my confidant, and my greatest joy.</p>
         <p class="content">I promise to stand by you through thick and thin, to celebrate our victories and support you through the challenges. Together, we can conquer the world.</p>
         <p class="content"> <center>"Love you so much baby"</center></p>
-        <p class="signature2">Forever yours, <br> [Main M]</p> 
+        <p class="signature2">Forever yours, <br> [Mani M]</p> 
     </div>
     <script src="script.js"></script>
 </body>
